# models_sitl_gazebo

ROMFS/: 1077_quad_f450_thermal
catkin_models/FlameWheel_F450_block/: CMakeLists.txt  package.xml
catkin_models/FlameWheel_F450_block/config/: joint_names_FlameWheel_F450_block.yaml
catkin_models/FlameWheel_F450_block/launch/: display.launch  gazebo.launch
catkin_models/FlameWheel_F450_block/meshes/: base_link.STL  propeller_4_link.STL
catkin_models/FlameWheel_F450_block/urdf/: FlameWheel_F450_block.csv  FlameWheel_F450_block.urdf
catkin_models/FlameWheel_F450_full/: CMakeLists.txt  package.xml
catkin_models/FlameWheel_F450_full/config/: joint_names_FlameWheel_F450_full.yaml
catkin_models/FlameWheel_F450_full/launch/: display.launch  gazebo.launch
catkin_models/FlameWheel_F450_full/meshes/: propeller_3.STL
catkin_models/FlameWheel_F450_full/urdf/: FlameWheel_F450_full.csv  FlameWheel_F450_full.urdf
catkin_models/FlameWheel_F450_propeller_z/: CMakeLists.txt  package.xml
catkin_models/FlameWheel_F450_propeller_z/launch/: display.launch  gazebo.launch
catkin_models/FlameWheel_F450_propeller_z/meshes/: propeller_3_link.STL
catkin_models/FlameWheel_F450_propeller_z/urdf/: FlameWheel_F450_propeller_z.csv  FlameWheel_F450_propeller_z.urdf
catkin_models/FlameWheel_F450_thermal/: CMakeLists.txt  package.xml
catkin_models/FlameWheel_F450_thermal/config/: joint_names_FlameWheel_F450_thermal.yaml
models/quad_f450_camera/: quad_f450_camera.sdf
worlds/: grass_pad.world  my_hexa.world  quad_f450.world
(+6 files in other folders)
